WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288819
[css-grid] `ASSERT(!isCalculated())` in `Length::value()` is hit under `RenderGrid::computeAutoRepeatTracksCount()` when loading
https://kizu.dev/position-driven-styles/
https://bugs.webkit.org/show_bug.cgi?id=288819
Summary
[css-grid] `ASSERT(!isCalculated())` in `Length::value()` is hit under `Rende...
Antoine Quint
Reported
2025-02-28 02:34:56 PST
If you load
https://kizu.dev/position-driven-styles/
with a ToT (
291310@main
) debug build, you hit `ASSERT(!isCalculated())` in `Length::value()` under a line `RenderGrid::computeAutoRepeatTracksCount()`. This occurs as the `transform` computed style is requested.
Attachments
Reduced test case
(449 bytes, text/html)
2025-04-30 14:28 PDT
,
Sammy Gill
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2025-02-28 02:38:07 PST
This page uses Scroll-driven Animations and that assertion is not hit if that flag is disabled. However the stack trace does not involve the animation code.
Radar WebKit Bug Importer
Comment 2
2025-03-07 02:35:15 PST
<
rdar://problem/146466356
>
Sammy Gill
Comment 3
2025-04-30 14:28:28 PDT
Created
attachment 475098
[details]
Reduced test case Attaching reduced test case. It seems like this code is attempting to apply the following logic from the spec when it comes to determine the count of the auto repeat rows: "For this purpose, each track is treated as its max track sizing function if that is definite or else its min track sizing function if that is definite. If both are definite, floor the max track sizing function by the min track sizing function. If neither are definite, the number of repetitions is one."
https://drafts.csswg.org/css-grid-2/#auto-repeat
We seem to fail to consider calc values here and presumably we should be using valueForLength in order to compute a proper value
Sammy Gill
Comment 4
2025-04-30 14:50:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44764
Sammy Gill
Comment 5
2025-04-30 20:36:34 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/52275
EWS
Comment 6
2025-05-01 07:34:54 PDT
Committed
294374@main
(417c5cd1cddf): <
https://commits.webkit.org/294374@main
> Reviewed commits have been landed. Closing PR #44764 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug